@@ -4,6 +4,7 @@ Slated for 2.7.0
 ================
 
 - RList: Moved to another package.
+- Added: RBrowseObjectPanel.
 
 
 Changed in 2.6.0
